--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://github.com/selahadiku/progate.github.io/blob/master/dt7-dts20.png">
+          <img class="logo" src="https://1.bp.blogspot.com/-LXFoyt7F4BU/XqEch09MVoI/AAAAAAAAKsg/Z7vmTrGMyvEZjzyBGuJHGBroObwVjnf7gCLcBGAsYHQ/s1600/dt7-dts20.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
