--- a/index.html
+++ b/index.html
@@ -1,81 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proyek Tim D7_DTS20 Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="stylesheet" type="text/css" href="responsive.css">
-  <link rel="shortcut icon" href="favicon.ico" >
-  <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
-  <!--     │││├┤   ├─┤├┬┘├┤         -->
-  <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
-  <!--     ╔═╗╦═╗╔═╗╔═╗╔═╗╔╦╗╔═╗    -->
-  <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
-  <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyek TIM HTML & CSS Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    
+  </head>
+  <body>
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://1.bp.blogspot.com/-LXFoyt7F4BU/XqEch09MVoI/AAAAAAAAKsg/Z7vmTrGMyvEZjzyBGuJHGBroObwVjnf7gCLcBGAsYHQ/s1600/dt7-dts20.png">
+          <img class="logo1" src="https://1.bp.blogspot.com/-VkUr11HV3ic/XqEoAAj--YI/AAAAAAAAKtM/mvLIsJK7E6w-KJd7O1UOlSooiI_d3oBDgCLcBGAsYHQ/s320/cooltext355413455550701.png" width="300" heigth="60">
         </div>
+        <!-- Tambahkan ikon menu disini -->
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
           <a href="#">HTML</a>
           <a href="#">CSS</a>
-          <a href="#" class="login">Angggota</a>
+          <a href="#" class="login">Profil</a>
         </div>
       </div>
     </header>
-    <div class="top-wrapper">
+     <div class="top-wrapper">
       <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
-        <p>We offer you a fully equipped coding environment to get you started.</p>
+        <h1>TIM D7 BELAJAR CODING</h1>
+        <h1>MEMBUAT PROYEK TIM MATERI HTML DAN CSS</h1>
+        <p>Belajar dari awal untuk memperdalam materi membuat web</p>
+        <p>Kami belu begitu mahir namun mencoba terus untuk belajar.</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn signup">Sign up with Email</a>
-          <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
+          <a href="#" class="btn signup">Daftar dengan Email</a>
+          <p>atau</p>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
         </div>
       </div>
     </div>
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+          <h2>Personel Anggota</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
+               <p>Hadi Setyo Nugroho</p>
             </div>
-            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+             <p class="text-contents">Guru SMP Mata Pelajaran Matematika yang sedang belajar coding</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
+              <p>Fatma Hidayati</p>
             </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+            <p class="text-contents">Deskripsi 2.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
+              <p>Fathia Fidianari</p>
             </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
+            <p class="text-contents">Deskripsi 3</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
+              <p>Hana Arisesa</p>
             </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+            <p class="text-contents">Deskripsi 4.</p>
+          </div>
+           <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <p>Hanung Teguh</p>
+            </div>
+            <p class="text-contents">Deskripsi 3</p>
           </div>
           <div class="clear"></div>
         </div>
@@ -84,17 +86,25 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
+          <h2>Apakah anda siap untuk menjadi programer yang handal?</h2>
+          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
         </div>
-        <span class="btn message">Start Learning</span>
+        <span class="btn message">Mulai Belajar</span>
       </div>
     </div>
-    <footer>
+    
+
+
+<!-- footer wrapper start -->
+<div id='footer-container'>
+ <footer>
       <div class="container">
         <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
         <p>Learn to code, learn to be creative.</p>
       </div>
     </footer>
+</div>
+<!-- footer wrapper end -->
+
   </body>
 </html>
