--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         </div>
       </div>
     </div>
+    <div class="testimoni">
+      <p>Testimoni</p>
+    </div>
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
