--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <h2>Testimoni</h2>
+    </div>
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
