--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>TIM D17 BELAJAR CODING</h1>
         <h1>MEMBUAT PROYEK TIM MATERI HTML DAN CSS</h1>
         <p>Belajar dari awal untuk memperdalam materi membuat web</p>
-        <p>Kami belu begitu mahir namun mencoba terus untuk belajar.</p>
+        <p>Kami belum begitu mahir namun mencoba terus untuk belajar.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Daftar dengan Email</a>
           <p>atau</p>
@@ -103,7 +103,7 @@
  <footer>
       <div class="container">
         <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+        <p>Created by D17_DTS 2020</p>
       </div>
     </footer>
 </div>
