--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
           <img class="logo1" src="https://1.bp.blogspot.com/-VkUr11HV3ic/XqEoAAj--YI/AAAAAAAAKtM/mvLIsJK7E6w-KJd7O1UOlSooiI_d3oBDgCLcBGAsYHQ/s320/cooltext355413455550701.png" width="300" heigth="60">
         </div>
         <!-- Tambahkan ikon menu disini -->
-        <div class="nav-right">
-            <a href="#">Home</a>
-            <a href="#team">Profil Kami</a>
-            <a href="#news">Info</a>
-            <a href="#contact">Hubungi Kami</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-              <i class="fa fa-bars"></i>
-            </a>
-          </div>
+                <span class="fa fa-bars menu-icon"></span>
+        <div class="header-right">
+          <a href="#">Pelajaran</a>
+          <a href="#">Daftar</a>
+          <a href="#" class="login">Log in</a>
         </div>
       </div>
+
     </header>
      <div class="top-wrapper">
       <div class="container">
