--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <!-- Tambahkan ikon menu disini -->
                 <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Pelajaran</a>
-          <a href="#">Daftar</a>
-          <a href="#" class="login">Log in</a>
+          <a href="#">Home</a>
+          <a href="#">Profil Kami</a>
+          <a href="#" class="login">Info</a>
+          <a href="#" class="login">Hubungi Kami</a>
         </div>
       </div>
 
