--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
             ><span class="fa fa-envelope"></span>Daftar dengan Email</a
           >
           <p>atau</p>
-          <a href="#" class="btn facebook"
-            ><span class="fab fa-facebook-f"></span>Daftar dengan Facebook</a
-          >
-          <a href="#" class="btn twitter"
-            ><span class="fab fa-twitter"></span>Daftar dengan Twitter</a
-          >
+         <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
         </div>
       </div>
     </div>
