--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <img src="https://prog-8.com/images/html/advanced/php.png">
               <p>Hana Arisesa</p>
             </div>
-            <p class="text-contents">Deskripsi 4.</p>
+            <p class="text-contents"> Web Development Enthusiast</p>
           </div>
            <div class="lesson">
             <div class="lesson-icon">
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="heading-message">
           <h2>TESTIMONI</h2>
-          <h2>Berisi materi.....</h2>
+          <h>Berisi materi.....</h2>
         </div>
         <span class="btn message">Silakan Gabung</span>
       </div>
