--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Kolaborasi TIM</h1>
         <h1>Membangun Proyek Profil TIM.</h1>
         <p>
-          D7_DTS20 merupakan TIM yang dibentuk melalui program Digital
+          D17_DTS20 merupakan TIM yang dibentuk melalui program Digital
           Talent Scholarship 2020
         </p>
         <div class="btn-wrapper">
@@ -50,7 +50,7 @@
     <div class="tim-wrapper" id="tim">
       <div class="container">
         <div class="heading">
-          <h2>TIM KAMI D7_DTS20</h2>
+          <h2>TIM KAMI D17_DTS20</h2>
           <h3>Personel Anggota</h3>
         </div>
        
@@ -67,7 +67,7 @@
               <img src="https://prog-8.com/images/html/advanced/jQuery.png">
               <p>Fatma Hidayati</p>
             </div>
-            <p class="text-contents">Deskripsi 2.</p>
+            <p class="text-contents">Pelajar yang sedang belajar</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
