--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <header>
       <div class="container">
+         <div class="header-left">
+          <img class="logo" src="https://1.bp.blogspot.com/-PtECEtfO7Ww/XqLlQuQY6RI/AAAAAAAAKuU/r-S0xJchsoQZnUsBuQ0vnNglYuTaOVOSACLcBGAsYHQ/s1600/cooltext355544675057954.png">
+        </div>
         <div class="topnav" id="myTopnav">
-          <div class="nav-left">
-            <img class="logo1" src="https://1.bp.blogspot.com/-PtECEtfO7Ww/XqLlQuQY6RI/AAAAAAAAKuU/r-S0xJchsoQZnUsBuQ0vnNglYuTaOVOSACLcBGAsYHQ/s1600/cooltext355544675057954.png" width="250" heigth="60">
-          </div>
           <div class="nav-right">
             <a href="#">Home</a>
             <a href="#tim">Profil Kami</a>
