--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <header>
       <div class="container">
          <div class="header-left">
-          <img class="logo" src="https://1.bp.blogspot.com/-PtECEtfO7Ww/XqLlQuQY6RI/AAAAAAAAKuU/r-S0xJchsoQZnUsBuQ0vnNglYuTaOVOSACLcBGAsYHQ/s1600/cooltext355544675057954.png">
+          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
         </div>
+
         <div class="topnav" id="myTopnav">
           <div class="nav-right">
             <a href="#">Home</a>
