--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
          <div class="header-left">
-          <img class="logo1" src="https://1.bp.blogspot.com/-PtECEtfO7Ww/XqLlQuQY6RI/AAAAAAAAKuU/r-S0xJchsoQZnUsBuQ0vnNglYuTaOVOSACLcBGAsYHQ/s1600/cooltext355544675057954.png" width="250" heigth="80">
+          <img class="logo1" src="https://1.bp.blogspot.com/-PtECEtfO7Ww/XqLlQuQY6RI/AAAAAAAAKuU/r-S0xJchsoQZnUsBuQ0vnNglYuTaOVOSACLcBGAsYHQ/s1600/cooltext355544675057954.png">
         </div>
 
         <div class="topnav" id="myTopnav">
