--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container">
         <div class="heading-message">
           <h2>TESTIMONI</h2>
-          <h>Berisi materi.....</h2>
+          <h>Berisi materi dari dasar (nol) dengan bantuan tampilan yang memudahkan untuk koreksi apabila ada sintax yang error. Sangat cocok bagi pemula dan tingkat lanjut untuk memperdalam pemograman web</h2>
         </div>
         <span class="btn message">Silakan Gabung</span>
       </div>
