--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <img src="https://prog-8.com/images/html/advanced/html.png">
                <p>Hadi Setyo Nugroho</p>
             </div>
-             <p class="text-contents">Guru SMP Mata Pelajaran Matematika yang sedang belajar coding</p>
+             <p class="text-contents">Guru Matematika yang sedang belajar coding</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
@@ -75,7 +75,7 @@
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
               <p>Fathia Fidianari</p>
             </div>
-            <p class="text-contents">Deskripsi 3</p>
+            <p class="text-contents"></p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
@@ -89,7 +89,7 @@
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
               <p>Hanung Teguh</p>
             </div>
-            <p class="text-contents">Deskripsi 3</p>
+            <p class="text-contents"></p>
           </div>
           <div class="clear"></div>
         </div>
